--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    
+    <!-- Supabase JS Client (UMD build for browser) -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.min.js"></script>
 </head>
-
 <body>
     <div class="container">
         <div class="card">
@@ -19,19 +19,16 @@
                 <h1>Flood Alert System</h1>
                 <p>Get instant SMS notifications for high water levels near you.</p>
             </div>
-
             <form id="signupForm">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" name="name" placeholder="Enter your full name" required>
                 </div>
-
                 <div class="form-group">
                     <label for="phone">Phone Number</label>
                     <input type="tel" id="phone" name="phone" placeholder="+923001234567" required>
                     <small>Format: +92...</small>
                 </div>
-
                 <div class="form-group">
                     <label for="station">Nearest River Station</label>
                     <select id="station" name="station" required>
@@ -45,7 +42,6 @@
                         <option value="CHASHMA">Chashma</option>
                     </select>
                 </div>
-
                 <button type="submit" id="submitBtn">Sign Up for Alerts</button>
             </form>
             <div id="message" class="message"></div>
@@ -53,5 +49,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
